--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -3,37 +3,68 @@ name: Deploy Image to AWS ECR
 on:
   push:
     branches: [ main ]
+
 env:
-  AWS_REGION: "us-east-2"
+  AWS_REGION: us-east-2
+  ECS_TASK_DEFINITION: esign-task-definition
+  CONTAINER_NAME: esign-service-container
+  ECR_REPOSITORY: spring-boot-test-app
+  ECS_SERVICE: esign-service
+  ECS_CLUSTER: lrl-cluwe-modernization
+
 permissions:
-     id-token: write
-     contents: read
+  id-token: write
+  contents: read
+
 jobs:
-  
   build:
     name: Build Image
     runs-on: ubuntu-latest
     steps:
-    
-    - name: Check out code
-      uses: actions/checkout@v2
-    
-    - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-          role-to-assume: arn:aws:iam::408309576403:role/lrl-cluwe-developers
-          role-session-name: samplerolesession
+      - name: Check out code
+        uses: actions/checkout@v2
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          role-to-assume: arn:aws:iam::408309576403:role/lrl-cluwe-dev-r4
           aws-region: ${{ env.AWS_REGION }}
 
-    - name: Login to Amazon ECR
-      id: login-ecr
-      uses: aws-actions/amazon-ecr-login@v1
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1
 
-    - name: Build, tag, and push image to Amazon ECR
-      env:
-        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: spring-boot-test-app
-        IMAGE_TAG: sample-image
-      run: |
-        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+      - name: Build, tag, and push image to Amazon ECR
+        env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          ECR_REPOSITORY: spring-boot-test-app
+          IMAGE_TAG: latest-sample-image
+        run: |
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+
+      - name: Download & update task definition
+        run: |
+          aws ecs describe-task-definition --task-definition ${{ env.ECS_TASK_DEFINITION }} \
+          --query taskDefinition > task-definition.json
+
+      - name: update the latest image ID in the AWS ECS task definition
+        id: task-def
+        uses: aws-actions/amazon-ecs-render-task-definition@v1
+        with:
+          task-definition: task-definition.json
+          container-name: ${{ env.CONTAINER_NAME }}
+          image: ${{ steps.set-ecr-uri.outputs.ecr_uri }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}
+
+      - name: Update the ECS service
+        run: |
+          aws ecs update-service --cluster ${{ env.ECS_CLUSTER }} --service ${{ env.ECS_SERVICE }} --force-new-deployment
+
+      - name: Deploy latest image to AWS ECS 
+        uses: aws-actions/amazon-ecs-deploy-task-definition@v1
+        with:
+          task-definition: task-definition.json
+          service: ${{ env.ECS_SERVICE }}
+          cluster: ${{ env.ECS_CLUSTER }}
+          wait-for-service-stability: true
+
