--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -3,7 +3,6 @@ name: Deploy Image to AWS ECR
 on:
   push:
     branches: [ main ]
-
 env:
   AWS_REGION: us-east-2
   ECS_TASK_DEFINITION: esign-task-definition
@@ -34,37 +33,18 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
-      - name: Build, tag, and push image to Amazon ECR
+      - name: Build and Push Docker Images
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: spring-boot-test-app
-          IMAGE_TAG: latest-sample-image
         run: |
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-
-      - name: Download & update task definition
-        run: |
-          aws ecs describe-task-definition --task-definition ${{ env.ECS_TASK_DEFINITION }} \
-          --query taskDefinition > task-definition.json
-
-      - name: update the latest image ID in the AWS ECS task definition
-        id: task-def
-        uses: aws-actions/amazon-ecs-render-task-definition@v1
-        with:
-          task-definition: task-definition.json
-          container-name: ${{ env.CONTAINER_NAME }}
-          image: ${{ steps.set-ecr-uri.outputs.ecr_uri }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}
-
-      - name: Update the ECS service
-        run: |
-          aws ecs update-service --cluster ${{ env.ECS_CLUSTER }} --service ${{ env.ECS_SERVICE }} --force-new-deployment
-
-      - name: Deploy latest image to AWS ECS 
-        uses: aws-actions/amazon-ecs-deploy-task-definition@v1
-        with:
-          task-definition: task-definition.json
-          service: ${{ env.ECS_SERVICE }}
-          cluster: ${{ env.ECS_CLUSTER }}
-          wait-for-service-stability: true
-
+            CURRENT_VERSION=(./.github/workflows/version.txt)
+            echo "CURRENT_VERSION=$CURRENT_VERSION" 
+            echo "$CURRENT_VERSION"
+            NEW_VERSION=$((CURRENT_VERSION + 1))
+            echo "$NEW_VERSION" >> ./.github/workflows/version.txt
+            IMAGE_TAG="latest-V1.${NEW_VERSION}"
+            echo "Generated Tag: $IMAGE_TAG"
+            echo "IMAGE_TAG=$IMAGE_TAG" >> "$GITHUB_ENV"
+            IMAGE_URI="$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" 
+            echo "${IMAGE_URI}"
