--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -1,10 +1,16 @@
 name: LRL-CLUWE-MOD-WEBTOOL-ESIGN-SERVICE
 on:
-  workflow_dispatch:
+   workflow_dispatch:
     inputs:
       module:
-        description: 'Module to build & deploy (UI, Esign, Version, CE)'
+        description: module
         required: true
+        default: Esign
+        options:
+        - UI
+        - Esign
+        - version
+        - CE
 
 permissions:
   id-token: write
