--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -3,8 +3,8 @@ on:
   workflow_dispatch:
     inputs:
       module:
-        description: module
-      module_tags:  
+        description: module ( 'UI' , 'Esign' , 'CE' 'Version' )
+      module_ui:  
         description: ' UI '
         required: false
         type: boolean
@@ -14,6 +14,12 @@ on:
         type: boolean
       build_ce:
         description: ' CE '
+        required: false
+        default: false
+        type: boolean
+
+      build_version:
+        description: ' Version '
         required: false
         default: false
         type: boolean
