--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -27,11 +27,8 @@ jobs:
           properties_file=".github/workflows/properties.txt"
           source "$properties_file"
           
-          ECR_REPOSITORY=$(echo "${{ matrix.module }}_ECR_REPOSITORY" | awk -F':' '{print $2}')
-          echo $ECR_REPOSITORY 
-          DOCKERFILE_PATH=$(echo "${{ matrix.module }}_DOCKERFILE_PATH | awk -F':' '{print $2}')"
-          echo $DOCKERFILE_PATH 
-                
+          ECR_REPOSITORY=$(grep ${{ matrix.module }}_ECR_REPOSITORY | cut -d':'-f2)3
+          export ${{ matrix.module }}_ECR_REPOSITORY=ECR_REPOSITORY 
    
           # Export the environment variables to GitHub Actions environment
           echo "ECR_REPOSITORY=$ECR_REPOSITORY" >> $GITHUB_ENV
