--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -27,9 +27,9 @@ jobs:
           properties_file=".github/workflows/properties.txt"
           source "$properties_file"
           
-          ECR_REPOSITORY=$(grep ${{ matrix.module }}_ECR_REPOSITORY | cut -d':'-f2)
+          ECR_REPOSITORY=$(grep ${{ matrix.module }}_ECR_REPOSITORY | cut -d':' -f2)
           export ${{ matrix.module }}_ECR_REPOSITORY=ECR_REPOSITORY
-          echo $ECR_REPOSITORY
+          echo "$ECR_REPOSITORY"
    
           # Export the environment variables to GitHub Actions environment
           echo "ECR_REPOSITORY=$ECR_REPOSITORY" >> $GITHUB_ENV
