--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -26,7 +26,7 @@ jobs:
          
           source=.github/workflows/properties.txt
           
-          ECR_REPOSITORY=$(grep ${{ matrix.module }}_ECR_REPOSITORY | cut -d':' -f2) 
+          ECR_REPOSITORY=$(echo ${{ matrix.module }}_ECR_REPOSITORY | cut -d':' -f1) 
           echo "ECR_REPOSITORY=$ECR_REPOSITORY"
           echo "$ECR_REPOSITORY"
           
