--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Set Environment Variables
         run: |
          
-          source=.github/workflows/properties.txt
+          source .github/workflows/properties.txt
           
           ECR_REPOSITORY=$(echo ${{ matrix.module }}_ECR_REPOSITORY | cut -d':' -f2) 
           echo "ECR_REPOSITORY=$ECR_REPOSITORY"
