--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -23,11 +23,15 @@ jobs:
 
       - name: Set Environment Variables
         run: |
-         
+          # Source the properties file to set environment variables
           source .github/workflows/properties.txt
           
-          ECR_REPO=$Esign_ECR_REPOSITORY
-          echo "ECR_REPO=$ECR_REPO"
-          echo "$ECR_REPO"
+          # Access the variables
+          echo "ECR_REPOSITORY: $Esign_ECR_REPOSITORY"
+          echo "DOCKERFILE_PATH: $Esign_DOCKERFILE_PATH"
+          echo "ECS_SERVICE: $Esign_ECS_SERVICE"
+          echo "CONTAINER_NAME: $Esign_CONTAINER_NAME"
+          echo "ECS_TASK_DEFINITION: $Esign_ECS_TASK_DEFINITION"
+   
 
           
