--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -14,7 +14,7 @@ jobs:
   build_and_deploy:
     strategy:
       matrix:
-        module: ['Esign']
+        module: [ Esign ]
     runs-on: ubuntu-latest
 
     steps:
@@ -27,11 +27,11 @@ jobs:
           source .github/workflows/properties.txt
           
           # Access the variables
-          echo "ECR_REPOSITORY: $Esign_ECR_REPOSITORY"
-          echo "DOCKERFILE_PATH: $Esign_DOCKERFILE_PATH"
-          echo "ECS_SERVICE: $Esign_ECS_SERVICE"
-          echo "CONTAINER_NAME: $Esign_CONTAINER_NAME"
-          echo "ECS_TASK_DEFINITION: $Esign_ECS_TASK_DEFINITION"
+          echo "ECR_REPOSITORY: ${{matrix.module}}_ECR_REPOSITORY"
+          echo "DOCKERFILE_PATH: ${{matrix.module}}_DOCKERFILE_PATH"
+          echo "ECS_SERVICE: ${{matrix.module}}_ECS_SERVICE"
+          echo "CONTAINER_NAME: ${{matrix.module}}_CONTAINER_NAME"
+          echo "ECS_TASK_DEFINITION: ${{matrix.module}}_ECS_TASK_DEFINITION"
    
 
           
