--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -25,13 +25,26 @@ jobs:
         run: |
           # Source the properties file to set environment variables
           source .github/workflows/properties.txt
-          
-          # Access the variables
-          echo "ECR_REPOSITORY: $${{matrix.module}}_ECR_REPOSITORY"
-          echo "DOCKERFILE_PATH: $${{matrix.module}}_DOCKERFILE_PATH"
-          echo "ECS_SERVICE: $${{matrix.module}}_ECS_SERVICE"
-          echo "CONTAINER_NAME: $${{matrix.module}}_CONTAINER_NAME"
-          echo "ECS_TASK_DEFINITION: $${{matrix.module}}_ECS_TASK_DEFINITION"
-   
 
+
+          # Use the matrix.module value to dynamically fetch the properties
+          ECR_REPOSITORY="$${{ matrix.module }}_ECR_REPOSITORY"
+          DOCKERFILE_PATH="$${{ matrix.module }}_DOCKERFILE_PATH"
+          ECS_SERVICE="$${{ matrix.module }}_ECS_SERVICE"
+          CONTAINER_NAME="$${{ matrix.module }}_CONTAINER_NAME"
+          ECS_TASK_DEFINITION="$${{ matrix.module }}_ECS_TASK_DEFINITION"
+      
+          echo "ECR_REPOSITORY: $ECR_REPOSITORY"
+          echo "DOCKERFILE_PATH: $DOCKERFILE_PATH"
+          echo "ECS_SERVICE: $ECS_SERVICE"
+          echo "CONTAINER_NAME: $CONTAINER_NAME"
+          echo "ECS_TASK_DEFINITION: $ECS_TASK_DEFINITION"
+      
+          echo "ECR_REPOSITORY=$ECR_REPOSITORY" >> $GITHUB_ENV
+          echo "DOCKERFILE_PATH=$DOCKERFILE_PATH" >> $GITHUB_ENV
+          echo "ECS_SERVICE=$ECS_SERVICE" >> $GITHUB_ENV
+          echo "CONTAINER_NAME=$CONTAINER_NAME" >> $GITHUB_ENV
+          echo "ECS_TASK_DEFINITION=$ECS_TASK_DEFINITION" >> $GITHUB_ENV
+
+    
           
